@@ -19,6 +19,7 @@
 #include "ompi_config.h"
 
 #include "mpi/f77/bindings.h"
+#include "mpi/f77/constants.h"
 
 #if OMPI_HAVE_WEAK_SYMBOLS && OMPI_PROFILE_LAYER
 #pragma weak PMPI_ALLGATHER = mpi_allgather_f
@@ -67,6 +68,10 @@ void mpi_allgather_f(char *sendbuf, MPI_Fint *sendcount, MPI_Fint *sendtype,
     c_comm = MPI_Comm_f2c(*comm);
     c_sendtype = MPI_Type_f2c(*sendtype);
     c_recvtype = MPI_Type_f2c(*recvtype);
+
+    if (OMPI_IS_FORTRAN_IN_PLACE(sendbuf)) {
+        sendbuf = MPI_IN_PLACE;
+    }
 
     *ierr = OMPI_INT_2_FINT(MPI_Allgather(sendbuf,
 					  OMPI_FINT_2_INT(*sendcount),
