@@ -19,6 +19,7 @@
 #include "ompi_config.h"
 
 #include "mpi/f77/bindings.h"
+#include "mpi/f77/constants.h"
 
 #if OMPI_HAVE_WEAK_SYMBOLS && OMPI_PROFILE_LAYER
 #pragma weak PMPI_ALLREDUCE = mpi_allreduce_f
@@ -68,6 +69,11 @@ void mpi_allreduce_f(char *sendbuf, char *recvbuf, MPI_Fint *count,
     c_comm = MPI_Comm_f2c(*comm);
     c_type = MPI_Type_f2c(*datatype);
     c_op = MPI_Op_f2c(*op);
+
+    if (OMPI_IS_FORTRAN_IN_PLACE(sendbuf)) {
+        printf("converted to inplace\n");
+        sendbuf = MPI_IN_PLACE;
+    }
 
     *ierr = OMPI_INT_2_FINT(MPI_Allreduce(sendbuf, recvbuf,
 					  OMPI_FINT_2_INT(*count),
